# minio-rs

./: .gitignore  .rustfmt.toml  .test.env  .travis.yml  ABSOLUTE_REQUIREMENTS_CHECKLIST.md  BENCHMARK_UPDATES.md  BUCKET_HASBUCKET_CORRECT_ANALYSIS.md  BUCKET_RESPONSES_HASBUCKET_ANALYSIS.md  CLAUDE.md  CNAME  COVERAGE_IMPROVEMENT_REPORT.md  Cargo.toml  Cargo.toml.bak  DEBUGGING_SESSION_2.md  DEBUGGING_SESSION_3.md  DOCUMENTATION_CLEANUP_COMPLETE.txt  HASBUCKET_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  LAZY_REFACTORING_PROGRESS.md  LAZY_REFACTORING_STATUS_FINAL.md  LAZY_RESPONSE_PATTERN.md  LAZY_RESPONSE_REFACTORING_PLAN.md  MADMIN_ENCRYPTION.md  MADMIN_RESPONSE_TRAITS_ANALYSIS.md  MINIO_RS_FEATURE_ANALYSIS.md  Makefile  PARQUET_EXEC_INTEGRATION_GUIDE.md  PARQUET_EXEC_WORKING_SOLUTION.rs  PLAN_ILIKE_PUSHDOWN.md  PLAN_PHASE2_COMPLETED.md  PRE_COMMIT_VERIFICATION.md  PUSHDOWN_SUPPORT_SUMMARY.md  README.md  REQUIREMENT_ENFORCEMENT_SUMMARY.md  RESOLUTION.md  S3TABLES_ICEBERG_ANALYSIS.md  S3_TABLES_POC.md  SELECT_OBJECT_CONTENT_EXPLAINED.md  SIGNATURE_DEBUGGING_PLAN.md  STEP3_IMPLEMENTATION_PLAN.md  (+28 more)
.claude/: QUICKSTART.md  README.md  settings.local.json
.claude/commands/: check-coverage.md  test-coverage.md
.github/: comprehensive-release.yml  copilot-instructions.md  release.yml
.github/workflow/: ci.yml  rust.yml
.github/workflows/: aistor.yml  ci.yml  deployer.yml  label-checker.yaml  license-header-check.yml  lint.yml  rust-clippy.yml  rust-rdma.yml  rust.yml  s3tables-integration.yml
benches/: README.md  bench_check_bucket_name.rs  bench_checksums.rs
benches/s3/: api_benchmarks.rs  bench_bucket_exists.rs  bench_bucket_lifecycle.rs  bench_bucket_notification.rs  bench_bucket_policy.rs  bench_bucket_replication.rs  bench_bucket_tagging.rs  bench_bucket_tags.rs  bench_bucket_versioning.rs  bench_list_bucket.rs  bench_object_append.rs  bench_object_copy.rs  bench_object_legal_hold.rs  bench_object_lock_config.rs  bench_object_put.rs  bench_object_retention.rs  bench_object_tagging.rs  bench_object_tags.rs  common_benches.rs
common/: Cargo.toml
common/src/: cleanup_guard.rs  example.rs  lib.rs  rand_reader.rs  rand_src.rs  test_context.rs  utils.rs
crates/iceberg-sigv4/: Cargo.toml  README.md
crates/iceberg-sigv4/src/: auth.rs  canonical.rs  credentials.rs  lib.rs  signing_key.rs  sigv4.rs  utils.rs
docs/: ALTERNATIVE_BACKENDS.md  BENCHMARK_GARAGE_COMPARISON.md  CNAME  DATAFUSION_BENCHMARK_RESULTS.md  DATAFUSION_MINIO_BENCHMARK_PLAN.md  ICEBERG_FEATURE_MATRIX.md  ILIKE_PUSHDOWN_OPTIMIZATION_PROJECT.md  INVENTORY.md  PUSHDOWN_BENCHMARK_REPORT.md  REFACTORING_2025-11-07.md  S3TABLES_TESTS.md  TESTING_STRATEGY.md  TEST_COVERAGE.md  crates.js  datafusion-integration-status.md  help.html  index.html  madmin-api-status.md  madmin-usage-guide.md  madmin_error_handling_examples.md  madmin_error_integration_guide.md  pending-from-minio-go.md  polaris-credential-subscoping.md  search-index.js  settings.html  source-files.js  src-files.js  tables-api-integration.md
docs/minio/: all.html  index.html  macro.impl_from_s3response!.html  macro.impl_from_s3response.html  macro.impl_from_s3response_with_size!.html  macro.impl_from_s3response_with_size.html  macro.impl_has_s3fields!.html  macro.impl_has_s3fields.html  sidebar-items.js
docs/minio_common/: all.html  index.html  sidebar-items.js
docs/minio_macros/: all.html  attr.test.html  index.html
examples/: append_object.rs  bucket_encryption.rs  bucket_lifecycle.rs  bucket_versioning.rs  common.rs  debug_logging_hook.rs  file-downloader.rs  file-uploader.rs  file_downloader.rs  file_uploader.rs  get_bucket_encryption.rs  get_bucket_versioning.rs  get_put_rdma.rs  gpu_host_disk.rs  inventory_basic.rs  inventory_monitoring.rs  inventory_with_filters.rs  load_balancing_with_hooks.rs  multipart_rdma.rs  object_prompt.rs  put-object.rs  put_object.rs  s3_backend_benchmark.rs  s3_performance_comparison.rs  storage_class_checksum.rs  tables_quickstart.rs
examples/datafusion/: minio_table_provider_impl.rs  profile_overhead.rs  s3tables_pushdown_benchmark.rs  sdk_comparison_benchmark.rs  unified_datafusion_benchmark.rs
examples/madmin/: madmin_config_history.rs  madmin_monitoring.rs  madmin_policy_entities.rs  madmin_policy_management.rs  madmin_server_info.rs  madmin_service_accounts.rs  madmin_user_management.rs
examples/s3inventory/: inventory_basic.rs  inventory_benchmark_scan.rs  inventory_error_handling.rs  inventory_monitoring.rs  inventory_stress_concurrent_configs.rs  inventory_stress_concurrent_reads.rs  inventory_stress_large_dataset.rs  inventory_stress_performance.rs  inventory_stress_rapid_state_changes.rs  inventory_stress_state_chaos.rs  inventory_stress_sustained_load.rs  inventory_stress_throughput_saturation.rs  inventory_stress_write_during_scan.rs  inventory_with_filters.rs
examples/s3tables/: README_STRESS_TESTS.md  deletion_benchmark.rs  optimization_benchmark.rs  plot_tables_saturation.py  plot_tables_sustained.py  simd_benchmark.rs  simd_benchmark_full.rs  (+7 more)
macros/: Cargo.toml
macros/src/: lib.rs  test_attr.rs
scripts/: analyze_responses.py
src/: lib.rs  main.rs  minio.rs
tests/: API_TEST_MATRIX.md  TESTING.md  TEST_COVERAGE.md  common.rs  docker-compose.http.yml  docker-compose.yml  integration_test.rs  private.key  public.crt  run-tests-windows.ps1  start-aistor-server.sh  start-server.sh  tables_integration.rs  tables_unit_tests.rs  test_append_object.rs  test_bucket_create_delete.rs  test_bucket_encryption.rs  test_bucket_exists.rs  test_bucket_lifecycle.rs  test_bucket_notification.rs  test_bucket_policy.rs  test_bucket_replication.rs  test_bucket_tagging.rs  test_bucket_tags.rs  test_bucket_versioning.rs  test_compose_object.rs  test_copy_object.rs  test_create_delete_bucket.rs  test_get_object.rs  test_get_presigned_object_url.rs  test_get_presigned_post_form_data.rs  test_list_buckets.rs  test_list_objects.rs  test_listen_bucket_notification.rs  test_madmin.rs  test_madmin_traits.rs  test_object_compose.rs  test_object_copy.rs  test_object_delete.rs  test_object_legal_hold.rs  (+13 more)
(+2679 files in other folders)
