[package]
name = "minio"
version = "0.3.0"
edition = "2024"
authors = ["MinIO Dev Team <dev@min.io>"]
description = "MinIO SDK for Amazon S3 compatible object storage access"
license = "Apache-2.0"
repository = "https://github.com/minio/minio-rs"
readme = "README.md"
keywords = ["object-storage", "minio", "s3"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["default-tls", "default-crypto", "http2"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
default-crypto = ["dep:sha2", "dep:hmac"]
# ring provides faster crypto using assembly optimizations
ring = ["dep:ring"]
# HTTP/2 support for improved throughput via multiplexing.
# Gracefully falls back to HTTP/1.1 when the server doesn't support it.
http2 = ["reqwest/http2"]
localhost = []

[workspace.dependencies]
uuid = "1.19"
futures-util = "0.3"
futures-io = "0.3"
reqwest = { version = "0.12", default-features = false }
bytes = "1.11"
async-std = "1.13"
tokio = "1.49"
rand = "0.9"
log = "0.4"
chrono = "0.4"
http = "1.4"


[dependencies]
uuid = { workspace = true, features = ["v4"]  }
futures-util = { workspace = true }
bytes = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
reqwest = { workspace = true, features = ["stream"] }

async-recursion = "1.1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
chrono = { workspace = true, features = ["serde"] }
crc-fast = "1.10"
dashmap = "6.1.0"
env_logger = "0.11"
hmac = { version = "0.12", optional = true }
hyper = { version = "1.8", features = ["full"] }
lazy_static = "1.5"
log = { workspace = true }
md5 = "0.8"
multimap = "0.10"
percent-encoding = "2.3"
url = "2.5"
regex = "1.12"
ring = { version = "0.17", optional = true, default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = { version = "0.10", optional = true }
urlencoding = "2.1"
xmltree = "0.12"
http = { workspace = true }
thiserror = "2.0"
typed-builder = "0.23"
# Madmin encryption dependencies
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"

[dev-dependencies]
minio-common = { path = "./common" }
minio-macros = { path = "./macros" }
tokio = { workspace = true, features = ["full"] }
async-std = { workspace = true, features = ["attributes", "tokio1"] }
clap = { version = "4.5", features = ["derive"] }
rand = { workspace = true, features = ["small_rng"] }
quickcheck = "1.0"
criterion = "0.8"

[lib]
name = "minio"
path = "src/lib.rs"

[[example]]
name = "file_uploader"

[[example]]
name = "file_downloader"

[[example]]
name = "object_prompt"

[[example]]
name = "append_object"

[[example]]
name = "load_balancing_with_hooks"

[[example]]
name = "madmin_server_info"
path = "examples/madmin/madmin_server_info.rs"

[[example]]
name = "madmin_config_history"
path = "examples/madmin/madmin_config_history.rs"

[[example]]
name = "madmin_monitoring"
path = "examples/madmin/madmin_monitoring.rs"

[[example]]
name = "madmin_policy_entities"
path = "examples/madmin/madmin_policy_entities.rs"

[[example]]
name = "madmin_policy_management"
path = "examples/madmin/madmin_policy_management.rs"

[[example]]
name = "madmin_service_accounts"
path = "examples/madmin/madmin_service_accounts.rs"

[[example]]
name = "madmin_user_management"
path = "examples/madmin/madmin_user_management.rs"

[[example]]
name = "inventory_basic"
path = "examples/s3inventory/inventory_basic.rs"

[[example]]
name = "inventory_monitoring"
path = "examples/s3inventory/inventory_monitoring.rs"

[[example]]
name = "inventory_with_filters"
path = "examples/s3inventory/inventory_with_filters.rs"

[[example]]
name = "inventory_benchmark_scan"
path = "examples/s3inventory/inventory_benchmark_scan.rs"

[[example]]
name = "inventory_stress_performance"
path = "examples/s3inventory/inventory_stress_performance.rs"

[[example]]
name = "inventory_stress_rapid_state_changes"
path = "examples/s3inventory/inventory_stress_rapid_state_changes.rs"

[[example]]
name = "inventory_stress_concurrent_configs"
path = "examples/s3inventory/inventory_stress_concurrent_configs.rs"

[[example]]
name = "inventory_stress_concurrent_reads"
path = "examples/s3inventory/inventory_stress_concurrent_reads.rs"

[[example]]
name = "inventory_stress_write_during_scan"
path = "examples/s3inventory/inventory_stress_write_during_scan.rs"

[[example]]
name = "inventory_stress_large_dataset"
path = "examples/s3inventory/inventory_stress_large_dataset.rs"

[[bench]]
name = "s3-api"
path = "benches/s3/api_benchmarks.rs"
harness = false

[[bench]]
name = "bench_checksums"
path = "benches/s3/bench_checksums.rs"
harness = false
