[package]
name = "minio"
version = "0.3.0"
edition = "2024"
authors = ["MinIO Dev Team <dev@min.io>"]
description = "MinIO SDK for Amazon S3 compatible object storage access"
license = "Apache-2.0"
repository = "https://github.com/minio/minio-rs"
readme = "README.md"
keywords = ["object-storage", "minio", "s3"]
categories = ["api-bindings", "web-programming::http-client"]

[package.metadata.docs.rs]
features = ["datafusion", "puffin-compression"]

[features]
default = ["default-tls", "default-crypto", "http2"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
default-crypto = ["dep:sha2", "dep:hmac"]
# ring provides faster crypto using assembly optimizations
ring = ["dep:ring"]
# HTTP/2 support for improved throughput via multiplexing.
# Gracefully falls back to HTTP/1.1 when the server doesn't support it.
http2 = ["reqwest/http2"]
localhost = []
# Puffin compression support for Iceberg table compression
puffin-compression = ["dep:zstd", "dep:lz4_flex"]
# DataFusion integration for query pushdown support
datafusion = ["dep:datafusion", "dep:arrow", "dep:parquet", "dep:object_store", "dep:tokio"]

[workspace.dependencies]
uuid = "1.19"
futures-util = "0.3"
futures-io = "0.3"
reqwest = { version = "0.12", default-features = false }
bytes = "1.11"
async-std = "1.13"
tokio = "1.48"
rand = "0.9"
log = "0.4"
chrono = "0.4"
http = "1.4"


[dependencies]
uuid = { workspace = true, features = ["v4"]  }
futures-util = { workspace = true }
bytes = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
reqwest = { workspace = true, features = ["stream"] }

async-recursion = "1.1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
chrono = { workspace = true, features = ["serde"] }
crc-fast = "1.8"
dashmap = "6.1.0"
env_logger = "0.11"
hmac = { version = "0.12", optional = true }
hyper = { version = "1.8", features = ["full"] }
lazy_static = "1.5"
log = { workspace = true }
md5 = "0.8"
multimap = "0.10"
once_cell = "1.21"
percent-encoding = "2.3"
url = "2.5"
regex = "1.12"
ring = { version = "0.17", optional = true, default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = { version = "0.10", optional = true }
urlencoding = "2.1"
xmltree = "0.12"
http = { workspace = true }
thiserror = "2.0"
typed-builder = "0.23"
# DataFusion integration (optional, for query pushdown)
datafusion = { version = "51.0", optional = true }
arrow = { version = "57.1", optional = true }
parquet = { version = "57.1", features = ["snap"], optional = true }
object_store = { version = "0.12", optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
# Puffin compression (optional, for Iceberg table compression)
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }
plotters = "0.3.7"

[dev-dependencies]
minio-common = { path = "./common" }
minio-macros = { path = "./macros" }
tokio = { workspace = true, features = ["full"] }
async-std = { workspace = true, features = ["attributes", "tokio1"] }
clap = { version = "4.5", features = ["derive"] }
rand = { workspace = true, features = ["small_rng"] }
quickcheck = "1.0"
criterion = "0.8"
# DataFusion benchmark dependencies (also available as optional feature)
object_store = { version = "0.12", features = ["aws"] }
futures = "0.3"
# Iceberg-rust for proper manifest file creation in benchmarks
iceberg = { version = "0.7", features = ["storage-s3"] }
iceberg-catalog-rest = "0.7"
# Arrow/Parquet versions matching iceberg-rust 0.7 (v55.1)
# Use package aliasing to avoid conflicts with datafusion's arrow/parquet
arrow-array-55 = { version = "55.1", package = "arrow-array" }
arrow-schema-55 = { version = "55.1", package = "arrow-schema" }
parquet-55 = { version = "55.1", package = "parquet", features = ["async"] }

[lib]
name = "minio"
path = "src/lib.rs"

[[example]]
name = "file_uploader"

[[example]]
name = "file_downloader"

[[example]]
name = "object_prompt"

[[example]]
name = "append_object"

[[example]]
name = "load_balancing_with_hooks"

[[example]]
name = "tables_quickstart"
path = "examples/s3tables/tables_quickstart.rs"

[[example]]
name = "tables_stress_throughput_saturation"
path = "examples/s3tables/tables_stress_throughput_saturation.rs"

[[example]]
name = "tables_stress_sustained_load"
path = "examples/s3tables/tables_stress_sustained_load.rs"

[[example]]
name = "tables_stress_state_chaos"
path = "examples/s3tables/tables_stress_state_chaos.rs"

[[example]]
name = "sdk_comparison_benchmark"
path = "examples/datafusion/sdk_comparison_benchmark.rs"
required-features = ["datafusion"]

[[example]]
name = "s3tables_pushdown_benchmark"
path = "examples/datafusion/s3tables_pushdown_benchmark.rs"
required-features = ["datafusion"]

[[example]]
name = "simd_benchmark"
path = "examples/s3tables/simd_benchmark.rs"

[[example]]
name = "simd_benchmark_full"
path = "examples/s3tables/simd_benchmark_full.rs"
required-features = ["datafusion"]

[[example]]
name = "storage_pushdown_benchmark"
path = "examples/s3tables/storage_pushdown_benchmark.rs"

[[bench]]
name = "s3-api"
path = "benches/s3/api_benchmarks.rs"
harness = false

[[bench]]
name = "bench_checksums"
path = "benches/s3/bench_checksums.rs"
harness = false
