[package]
name = "minio_common"
version = "0.1.0"
edition = "2024"

[dependencies]
minio = {path = ".." }
tokio = { version = "1.45.1", features = ["full"] }
async-std = "1.13.1"
rand = { version = "0.8.5", features = ["small_rng"] }
bytes = "1.10.1"
log = "0.4.27"
chrono = "0.4.41"
reqwest = "0.12.20"
http = "1.3.1"
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }

[lib]
name = "minio_common"
path = "src/lib.rs"

