[package]
name = "minio-common"
version = "0.1.0"
edition = "2024"

[dependencies]
minio = {path = ".." }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true }
bytes = { workspace = true }
async-std = { workspace = true }

futures-io = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
rand = { version = "0.9.2", features = ["small_rng"] }

log = "0.4.27"
chrono = "0.4.41"

http = "1.3.1"

[lib]
name = "minio_common"
path = "src/lib.rs"

