[package]
name = "minio-common"
version = "0.1.0"
edition = "2024"

[dependencies]
minio = { path = ".." }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true }
bytes = { workspace = true }
async-std = { workspace = true }
futures-io = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true, features = ["small_rng"] }
log = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }

[lib]
name = "minio_common"
path = "src/lib.rs"

